--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -17,9 +17,9 @@ jobs:
       - run: pip install -r ./python/requirements.txt
           
       - name: push blogs
-        run: python3 ./python/dailyNews.py -f FeedList.json -e cve -o ./../states/blogs
+        run: python3 ./python/dailyNews.py -f FeedList.json -e cve -o ./states/blogs
       - name: push CVEs
-        run: python3 ./python/dailyNews.py -f FeedList.json -i cve -o ./../states/cve
+        run: python3 ./python/dailyNews.py -f FeedList.json -i cve -o ./states/cve
         
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
