--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -27,3 +27,15 @@ jobs:
           commit_user_name: websecnews
           commit_user_email: websecnews@local
           commit_author: websecnews <websecnews@local>
+          
+      - name: push cve RSS
+        env:
+          GITHUBTOKEN: ${{ secrets.GITHUBTOKEN }}
+        run: python3 python/CVE_RSS.py $GITHUBTOKEN
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "[Bot] Update all the things!"
+          commit_user_name: websecnews
+          commit_user_email: websecnews@local
+          commit_author: websecnews <websecnews@local>
